name:                hkl

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Picca Frédéric-Emmanuel
maintainer:          picca@debian.org
copyright:           Synchrotron SOLEIL
build-type:          Simple
cabal-version:       >= 1.10
Data-Files:          data/ghkl3.ui
                   , data/gprof2dot.py
                   , data/pseudo3.ui
                   , data/3d3.ui

Flag useHklDev
  Description: Use the current devel hkl library in the source tree
  Default: True

library
  exposed-modules:    Hkl
                    , Hkl.Binoculars
                    , Hkl.Binoculars.Common
                    , Hkl.Binoculars.Config
                    , Hkl.Binoculars.Pipes
                    , Hkl.Binoculars.Projections
                    , Hkl.Binoculars.Sixs
                    , Hkl.C
                    , Hkl.C.Binoculars
                    , Hkl.C.DArray
                    , Hkl.C.Detector
                    , Hkl.C.Engine
                    , Hkl.C.EngineList
                    , Hkl.C.Geometry
                    , Hkl.C.GeometryList
                    , Hkl.C.Lattice
                    , Hkl.C.Sample
                    , Hkl.Detector
                    , Hkl.Engine
                    , Hkl.H5
                    , Hkl.Image
                    , Hkl.Lattice
                    , Hkl.MyMatrix
                    , Hkl.Orphan
                    , Hkl.Pipes
                    , Hkl.Types
                    , Hkl.Types.Parameter
                    , Hkl.Utils
  other-modules:      Paths_hkl
  other-extensions:    CPP
                     , ForeignFunctionInterface
                     , EmptyDataDecls
                     , TypeFamilies
                     , FlexibleInstances
                     , FlexibleContexts
                     , RecordWildCards
  build-depends:       async
                     , attoparsec
                     , base >= 4.6
                     , bytestring >= 0.10.0.2
                     , config-ini
                     , dimensional >= 0.10
                     , directory >= 1.3.0
                     , errors
                     , exceptions
                     , extra
                     , filepath >= 1.3.0
                     , hdf5
                     , hmatrix >= 0.17
                     , hmatrix-gsl >= 0.17
                     , lens
                     , monad-logger
                     , monad-loops >= 0.4.2
                     , mtl
                     , path
                     , path-io
                     , pipes >= 4.1.2
                     , pipes-safe >= 2.2.0
                     , repa
                     , terminal-progress-bar
                     , text
                     , transformers >= 0.3
                     , vector >= 0.10.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(useHklDev)
    include-dirs:      ../../
                     , ../../hkl/
                     , ../../binoculars/
    pkgconfig-depends:   glib-2.0
  else
    pkgconfig-depends:   hkl
    extra-libraries:     hkl-binoculars

  ghc-options:         -O2
  ghc-options:         -Wall
  -- ghc-options:         -Werror
  ghc-options:         -Wincomplete-uni-patterns
  ghc-options:         -Wincomplete-record-updates
  -- ghc-options:         -fno-warn-incomplete-patterns

  ghc-options:         -g
  ghc-options:         -dcore-lint
  ghc-options:         -debug
  ghc-options:         -ddump-to-file
  ghc-options:         -ddump-simpl
  ghc-options:         -ddump-stg

executable binoculars-ng
  build-depends: base >= 4.6
  build-depends: attoparsec
  build-depends: containers >= 0.5 && < 0.7
  build-depends: dimensional >= 0.10
  build-depends: exceptions
  build-depends: filepath >= 1.3.0
  build-depends: hkl
  build-depends: monad-logger
  build-depends: monad-loops >= 0.4.2
  build-depends: optparse-applicative
  build-depends: pipes >= 4.1.2
  build-depends: text
  build-depends: transformers >= 0.3
  build-depends: vector >= 0.10.0.1

  default-language:    Haskell2010

  ghc-options: -O2
  ghc-options: -Wall
  ghc-options: -Werror
  ghc-options: -rtsopts
  ghc-options: -threaded
  ghc-options: -g
  ghc-options: -dcore-lint
  ghc-options: -debug
  ghc-options: -ddump-to-file
  ghc-options: -ddump-simpl
  ghc-options: -ddump-stg
  ghc-options: "-with-rtsopts=-N"

  if flag(useHklDev)
    pkgconfig-depends: gobject-2.0
    ghc-options: -pgml
    ghc-options: gcc
    ghc-options: "-optl-Wl,--allow-multiple-definition"
    ghc-options: "-optl-Wl,--whole-archive,../../hkl/.libs/libhkl.a,--no-whole-archive"
    ghc-options: "-optl-Wl,--whole-archive,../../binoculars/libhkl-binoculars.a,--no-whole-archive"

  ghc-prof-options: -fprof-auto
  ghc-prof-options: "-with-rtsopts=-N -p -s -h -i0.1"

  main-is: app/Binoculars.hs


executable hkl-test
  build-depends: attoparsec
  build-depends: base >= 4.6
  build-depends: config-ini
  build-depends: dimensional
  build-depends: hkl
  build-depends: hspec
  build-depends: path
  build-depends: text

  default-language: Haskell2010

  extra-libraries: hkl-binoculars
  extra-lib-dirs: ../../binoculars/

  ghc-options: -threaded
  ghc-options: -rtsopts=all
  ghc-options: -with-rtsopts=-K1k

  ghc-options: -O2
  ghc-options: -Wall
  ghc-options: -Werror
  ghc-options: -rtsopts
  ghc-options: -threaded
  ghc-options: -g
  ghc-options: -dcore-lint
  ghc-options: -debug
  ghc-options: -ddump-to-file
  ghc-options: -ddump-simpl
  ghc-options: -ddump-stg
  ghc-options: "-with-rtsopts=-N"

  if flag(useHklDev)
    pkgconfig-depends: gobject-2.0
    ghc-options: -pgml
    ghc-options: gcc

    -- ghc-options: "-optl-Wl,--allow-multiple-definition"
    -- ghc-options: "-optl-Wl,--whole-archive,../../hkl/.libs/libhkl.a,--no-whole-archive"
    -- ghc-options: "-optl-Wl,--whole-archive,../../binoculars/libhkl-binoculars.a,--no-whole-archive"

  hs-source-dirs: test

  main-is: Spec.hs

  other-modules: BinocularsSpec
  other-modules: Paths_hkl

  type: exitcode-stdio-1.0
