name:                hkl

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Picca Frédéric-Emmanuel
maintainer:          picca@debian.org
copyright:           Synchrotron SOLEIL
build-type:          Simple
cabal-version:       >= 1.10
Data-Files:          data/ghkl3.ui
                   , data/gprof2dot.py
                   , data/pseudo3.ui
                   , data/3d3.ui

Flag useHklDev
  Description: Use the current devel hkl library in the source tree
  Default: True

library
  build-depends: async
  build-depends: attoparsec
  build-depends: base >= 4.6
  build-depends: bytestring >= 0.10.0.2
  build-depends: config-ini
  build-depends: dimensional >= 0.10
  build-depends: directory >= 1.3.0
  build-depends: errors
  build-depends: exceptions
  build-depends: extra
  build-depends: filepath >= 1.3.0
  build-depends: hdf5
  build-depends: hmatrix >= 0.17
  build-depends: hmatrix-gsl >= 0.17
  build-depends: lens
  build-depends: monad-logger
  build-depends: monad-loops >= 0.4.2
  build-depends: mtl
  build-depends: path
  build-depends: path-io
  build-depends: pipes >= 4.1.2
  build-depends: pipes-safe >= 2.2.0
  build-depends: repa
  build-depends: terminal-progress-bar
  build-depends: text
  build-depends: transformers >= 0.3
  build-depends: vector >= 0.10.0.1

  default-language: Haskell2010

  exposed-modules: Hkl
  exposed-modules: Hkl.Binoculars
  exposed-modules: Hkl.Binoculars.Common
  exposed-modules: Hkl.Binoculars.Config
  exposed-modules: Hkl.Binoculars.Pipes
  exposed-modules: Hkl.Binoculars.Projections
  exposed-modules: Hkl.Binoculars.Sixs
  exposed-modules: Hkl.C
  exposed-modules: Hkl.C.Binoculars
  exposed-modules: Hkl.C.DArray
  exposed-modules: Hkl.C.Detector
  exposed-modules: Hkl.C.Engine
  exposed-modules: Hkl.C.EngineList
  exposed-modules: Hkl.C.Geometry
  exposed-modules: Hkl.C.GeometryList
  exposed-modules: Hkl.C.Lattice
  exposed-modules: Hkl.C.Sample
  exposed-modules: Hkl.Detector
  exposed-modules: Hkl.Engine
  exposed-modules: Hkl.H5
  exposed-modules: Hkl.Image
  exposed-modules: Hkl.Lattice
  exposed-modules: Hkl.MyMatrix
  exposed-modules: Hkl.Orphan
  exposed-modules: Hkl.Pipes
  exposed-modules: Hkl.Types
  exposed-modules: Hkl.Types.Parameter
  exposed-modules: Hkl.Utils

  extra-libraries: hkl-binoculars

  ghc-options: -g
  ghc-options: -Wall
  ghc-options: -Wincomplete-uni-patterns
  ghc-options: -Wincomplete-record-updates

  hs-source-dirs: src

  other-modules: Paths_hkl

  if flag(useHklDev)
    extra-libraries: hkl

    include-dirs: ../../
    include-dirs: ../../hkl/
    include-dirs: ../../binoculars/

    pkgconfig-depends: glib-2.0
  else
    pkgconfig-depends: hkl


executable binoculars-ng
  build-depends: base >= 4.6
  build-depends: attoparsec
  build-depends: containers >= 0.5 && < 0.7
  build-depends: dimensional >= 0.10
  build-depends: exceptions
  build-depends: filepath >= 1.3.0
  build-depends: hkl
  build-depends: monad-logger
  build-depends: monad-loops >= 0.4.2
  build-depends: optparse-applicative
  build-depends: pipes >= 4.1.2
  build-depends: text
  build-depends: transformers >= 0.3
  build-depends: vector >= 0.10.0.1

  default-language: Haskell2010

  ghc-options: -g
  ghc-options: -rtsopts
  ghc-options: -threaded
  ghc-options: "-with-rtsopts=-N"
  ghc-options: -Wall

  main-is: app/Binoculars.hs

  if flag(useHklDev)
    pkgconfig-depends: gobject-2.0

    ghc-options: "-optl-Wl,--allow-multiple-definition"
    ghc-options: "-optl-Wl,--whole-archive,../../hkl/.libs/libhkl.a,--no-whole-archive"
    ghc-options: "-optl-Wl,--whole-archive,../../binoculars/libhkl-binoculars.a,--no-whole-archive"


test-suite hkl-test
  build-depends: attoparsec
  build-depends: base >= 4.6
  build-depends: config-ini
  build-depends: dimensional
  build-depends: hkl
  build-depends: hspec
  build-depends: path
  build-depends: text

  default-language: Haskell2010

  ghc-options: -g
  ghc-options: -Wall
  ghc-options: -rtsopts
  ghc-options: -threaded
  ghc-options: "-with-rtsopts=-N"

  hs-source-dirs: test

  main-is: Spec.hs

  other-modules: BinocularsSpec
  other-modules: Paths_hkl

  type: exitcode-stdio-1.0

  if flag(useHklDev)
    pkgconfig-depends: gobject-2.0

    ghc-options: "-optl-Wl,--allow-multiple-definition"
    ghc-options: "-optl-Wl,--whole-archive,../../hkl/.libs/libhkl.a,--no-whole-archive"
    ghc-options: "-optl-Wl,--whole-archive,../../binoculars/libhkl-binoculars.a,--no-whole-archive"
